--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Eustace-Marchmont-A-friend-of-the-people_68596
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 68596-h/images/cover.jpg
 creator:
   author:
     agent_name: Everett-Green, Evelyn
@@ -14,6 +17,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/4888
     wikipedia: https://en.wikipedia.org/wiki/Evelyn_Everett-Green
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68596#Eustace-Marchmont-A-friend-of-the-people
 gutenberg_issued: '2022-07-24'
 identifiers:
   gutenberg: '68596'
